@@ -1,4 +1,5 @@
 0.3.0
+Added -c/--full-compile switch to compile script and compile final application.
 Added --syntax-check/-s switch to check syntax, will use shellcheck if installed.
 Done case/esac.
 Fixed 'exit' with no exit code.
